--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- ================= NAVBAR ================= -->
   <header class="navbar">
     <div class="container">
-      <div class="logo">Samasta</div>
+      <div class="logo">Baskara</div>
       <nav>
         <ul>
           <li><a href="#hero">Home</a></li>
@@ -35,8 +35,9 @@
 
     <div class="hero-content">
       <h1>
-        Aloo Ngabss!, <br>
-        Watashi Samasta Si Tampan
+        What's Up dawg, <br>
+        Pria tampan siapa lagi kalau bukan Baskara
+
       </h1>
 
       <div class="hero-divider"></div>
