--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
     <div class="hero-content">
       <h1>
-        What's Up dawg, <br>
-        Pria tampan siapa lagi kalau bukan Baskara
+        What's Up dawg! <br>
+        Selamat datang di web Samasta Pria dingin
 
       </h1>
 
