--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="hero-content">
       <h1>
         What's Up dawg! <br>
-        Selamat datang di web Samasta Pria dingin
+        Selamat datang di web Samasta Pria Sigma
 
       </h1>
 
