--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- ================= NAVBAR ================= -->
   <header class="navbar">
     <div class="container">
-      <div class="logo">Baskara</div>
+      <div class="logo">Samasta</div>
       <nav>
         <ul>
           <li><a href="#hero">Home</a></li>
@@ -54,7 +54,7 @@
       <div class="hero-social">
         <a href="#">LinkedIn</a>
         <a href="#">GitHub</a>
-        <a href="#">Instagram</a>
+        <a href="https://www.instagram.com/_sambaskara?igsh=MXIxdXpsazRkbWFiaw==">Instagram</a>
       </div>
     </div>
 
@@ -124,7 +124,7 @@
 
         <div class="skill-card">
           <h3>Investment</h3>
-          <p>Fundamental Analysis, PER, Financial Ratio</p>
+          <p>Fundamental Analysis, Technical Analysis, Market Analysis</p>
         </div>
 
       </div>
