--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
       </p>
 
       <div class="hero-buttons">
-        <button class="btn-primary">Hubungi Saya</button>
+        <a href="https://wa.me/6285816961008?text=Halo%20Baskara,%20Kamu%20kok%20Ganteng%20B%banget20sih" target="_blank" class="btn-primary">Hubungi Saya</a>
         <button class="btn-outline">Lihat Portfolio</button>
       </div>
 
       <div class="hero-social">
         <a href="#">LinkedIn</a>
         <a href="#">GitHub</a>
-        <a href="https://www.instagram.com/_sambaskara?igsh=MXIxdXpsazRkbWFiaw==">Instagram</a>
+        <a href="https://www.instagram.com/_sambaskara?igsh=MXIxdXpsazRkbWFiaw==" target="_blank">Instagram</a>
       </div>
     </div>
 
