--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
       </p>
 
       <div class="hero-buttons">
-        <a href="https://wa.me/6285816961008?text=Halo%20Baskara,%20Kamu%20kok%20Ganteng%20B%banget20sih" target="_blank" class="btn-primary">Hubungi Saya</a>
+        <a href="https://wa.me/6285816961008?text=Halo%20Baskara,%20Kamu%20kok%20Ganteng%20Babanget%20sih" target="_blank" class="btn-primary">Hubungi Saya</a>
         <button class="btn-outline">Lihat Portfolio</button>
       </div>
 
       <div class="hero-social">
-        <a href="#">LinkedIn</a>
-        <a href="#">GitHub</a>
+        <a href="https://www.linkedin.com/in/samasta-pria-sigma-700825254/" target="_blank">LinkedIn</a>
+        <a href="https://github.com/samasta1922-dot/My-Project" target="_blank">GitHub</a>
         <a href="https://www.instagram.com/_sambaskara?igsh=MXIxdXpsazRkbWFiaw==" target="_blank">Instagram</a>
       </div>
     </div>
