--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- ================= NAVBAR ================= -->
   <header class="navbar">
     <div class="container">
-      <div class="logo">Samasta</div>
+      <div class="logo">Portofolio</div>
       <div class="menu-toggle" id="menu-toggle">
       
       <nav>
@@ -193,7 +193,7 @@
 <script src="script.js" defer></script>
 <script>
   function toggleMenu() {
-    document.getElementById("nav-Links");
+    const navLinks = document.getElementById("nav-Links");
     navLinks.classList.toggle('active');
   }
 </script>
