--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <!-- ================= NAVBAR ================= -->
   <header class="navbar">
     <div class="container">
+      <nav></nav>
       <div class="logo">Portofolio</div>
       <div class="menu-toggle" id="menu-toggle">
       
@@ -28,6 +29,11 @@
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#contact">Kontak</a></li>
         </ul>
+        <div class="hamburger" id="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
       </nav>
     </div>
   </header>
