--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <header class="navbar">
   <div class="container">
 
-    <div class="logo">Samasta</div>
+    <div class="logo">Portofolio</div>
 
     <nav>
       <ul class="nav-links" id="navLinks">
@@ -55,7 +55,7 @@
 
     <h1>
       What's Up Dawg! <br>
-      Selamat datang di web Samasta
+      Saya, Samasta Gito Baskara
     </h1>
 
     <div class="hero-divider"></div>
