--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
   <meta name="description" content="Portfolio resmi Samasta - Web Developer, Programmer, Tech Enthusiast & Value Investor.">
   <meta name="keywords" content="Web Developer, Portfolio, Programmer, Samasta, Frontend, Backend">
   <meta name="author" content="Samasta">
-
+  <meta name="theme-color" content="#d4af37">
+  
+  <!-- Performance (preconnect)-->
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ 
+    <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+ 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
-
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
   <!-- External CSS -->
   <link rel="stylesheet" href="style.css">
@@ -26,8 +31,14 @@
 <!-- ================= NAVBAR ================= -->
 <header class="navbar">
   <div class="container">
-
-    <div class="logo">Portofolio</div>
+  <div class="hamburger"
+        id="hamburger"
+        aria-label="Menu"
+        role="button">
+        <span></span>
+        <span></span>
+        <span></span>
+    <h1 class="logo">Portofolio</h1>
 
     <nav>
       <ul class="nav-links" id="navLinks">
