--- a/index.html
+++ b/index.html
@@ -55,11 +55,15 @@
 
 <!-- ================= HERO ================= -->
 <section id="hero" class="hero">
+  <div class="hero-bg"></div>
+  <div class="hero-glow"></div>
+
   <div class="hero-content">
 
     <h1>
       What's Up Dawg! <br>
-      Saya, Samasta Gito Baskara
+      Saya,<br>
+      <span class="name">Samasta Gito Baskara</span>
     </h1>
 
     <div class="hero-divider"></div>
