--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
   <div class="hero-content">
 
     <h1>
-      What's Up Dawg! <br>
-      Saya,<br>
+      Hao Saya,<br>
       <span class="name">Samasta Gito Baskara</span>
     </h1>
 
