--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <meta name="theme-color" content="#d4af37">
   
   <!-- Performance (preconnect)-->
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
- 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
- 
+
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
 
@@ -61,7 +61,7 @@
   <div class="hero-content">
 
     <h1>
-      Hao Saya,<br>
+      Halo Saya,<br>
       <span class="name">Samasta Gito Baskara</span>
     </h1>
 
@@ -72,7 +72,7 @@
     </p>
 
     <div class="hero-buttons">
-      <a href="https://wa.me/6285816961008?text=Halo%20Baskara"
+      <a href="https://wa.me/6285816961008?text=Halo%20Baskara%20Kamu%20Ganteng%20Bingits😍"
          target="_blank"
          rel="noopener noreferrer"
          class="btn-primary">
